# microbit-v2-samples

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.py  codal.ble.json  codal.dev.json  codal.json  codal.py  device.json  flash.jlink  library.json  mb-build-instructions.md  module.json  oob.cpp  openocd.cfg
.github/workflows/: build.yml  cppcheck.yml  docker-image.yml  onRelease.yml  scheduled.yml
.github/workflows/scripts/: install-toolchain-mac.sh  install-toolchain-ubuntu.sh  install-toolchain-win.ps1
application/: main.cpp
cmake/util/: util.cmake
inc/core/: CodalCompat.h  CodalDevice.h  CodalDmesg.h  CodalUSB.h  DeviceCompat.h  DeviceComponent.h  DeviceConfig.h  DeviceFiber.h  DeviceFont.h  DeviceHeapAllocator.h  DeviceListener.h  DeviceSystemTimer.h  ErrorNo.h  EventModel.h  MemberFunctionCallback.h  MicroBitComponent.h  NotifyEvents.h  SystemClock.h  Timer.h
inc/device/SAMD21/: DeviceTimer.h  PinMappings.h  SAMD21DAC.h  SAMD21DMAC.h  SAMD21PDM.h  USB.h  device_fiber.h  device_types.h  neopixel.h
inc/drivers/: AbstractButton.h  AnalogSensor.h  CapTouchButton.h  DeviceButton.h  DeviceMessageBus.h  DevicePin.h  DeviceSerial.h  DynamicPwm.h  Glue.h  HID.h  I2C.h  LIS3DH.h  LevelDetector.h  LinearAnalogSensor.h  MultiButton.h  NonLinearAnalogSensor.h  Pin.h  Serial.h  Synthesizer.h  TimedInterruptIn.h  TouchButton.h  TouchSensor.h  USBHID.h
inc/platform/: yotta_cfg_mappings.h
inc/types/: CoordinateSystem.h  DataStream.h  DeviceCoordinateSystem.h  DeviceEvent.h  DeviceImage.h  ManagedBuffer.h  ManagedString.h  ManagedType.h  Matrix4.h  PacketBuffer.h  RefCounted.h  list.h
scripts/: meminfo.js
source/: AccelerometerTest.cpp  AudioTest.cpp  BlinkyTest.cpp  BlinkyTest.unused  ButtonTest.cpp  CMakeLists.txt  CapTouchTest.cpp  DisplayTest.cpp  FactoryTransmitter.cpp  FactoryTransmitter.unused  GPIOTest.cpp  GPIOTest.unused  LightLevelTestRaw.cpp  MicrophoneTest.cpp  OOB.cpp  PowerManagementTest.cpp  RadioTestRx.cpp  SerialNumber.cpp  SerialNumber.unused  SerialStreamer.cpp  SerialStreamer.h  SpeakerTest.cpp  TemperatureTest.cpp  TemperatureTest.unused  Tests.h  USBFlashTest.cpp  main.cpp
source/core/: CodalCompat.cpp  CodalDevice.cpp  CodalDmesg.cpp  CodalUSB.cpp  DeviceCompat.cpp  DeviceComponent.cpp  DeviceFiber.cpp  DeviceFont.cpp  DeviceHeapAllocator.cpp  DeviceListener.cpp  DeviceSystemTimer.cpp  MemberFunctionCallback.cpp  MicroBitHeapAllocator.cpp  Timer.cpp
source/device/: DeviceTimer.cpp  USB.cpp
source/device/SAMD21/: SAMD21DAC.cpp  SAMD21DMAC.cpp  SAMD21PDM.cpp
source/drivers/: AbstractButton.cpp  AnalogSensor.cpp  CapTouchButton.cpp  DeviceButton.cpp  DeviceMessageBus.cpp  DevicePin.cpp  DynamicPwm.cpp  HID.cpp  LIS3DH.cpp  LevelDetector.cpp  LinearAnalogSensor.cpp  MicroBitPin.cpp  MultiButton.cpp  NonLinearAnalogSensor.cpp  Synthesizer.cpp  TimedInterruptIn.cpp  TouchButton.cpp  TouchSensor.cpp  USBHID.cpp
source/samples/: AccelerometerTest.cpp  AudioTest.cpp  BLETest.cpp  BlinkyTest.cpp  ButtonTest.cpp  CapTouchTest.cpp  DataLoggingNextGenTest.cpp  DataLoggingTest.cpp  DeepSleepTest.cpp  DisplayTest.cpp  FIFOStream.cpp  FIFOStream.h  GPIOTest.cpp  MicrophoneTest.cpp  MorseCode.cpp  NeopixelsTest.cpp  NoiseProfiler.cpp  NoiseProfiler.h  OOB.cpp  OOB.h  OOB_v3.cpp  PowerManagementTest.cpp  README.md  RadioTestRx.cpp  RecordingTest.cpp  SerialStreamer.cpp  SerialStreamer.h  SpeakerTest.cpp  StreamAPITest.cpp  TapeDeck.cpp  TapeDeck.h  TemperatureTest.cpp  Tests.h  USBFlashTest.cpp
source/types/: DataStream.cpp  DeviceEvent.cpp  DeviceImage.cpp  EmptyInstances.cpp  ManagedBuffer.cpp  ManagedString.cpp  Matrix4.cpp  PacketBuffer.cpp  RefCounted.cpp  RefCountedInit.cpp
targets/: ARDUINO_UNO.json  ATMEGA328P_ARDUINO_UNO.json  CIRCUIT_PLAYGROUND.json  SAMD21G18A_CIRCUIT_PLAYGROUND.json  SAMD21G18A_CIRCUIT_PLAYGROUND_MBED.json  SAMD21G18A_CIRCUIT_PLAYGROUND_MBED_CLASSIC.json
tests/CIRCUIT_PLAYGROUND/: blinky.cpp
travis_tests/ARDUINO_UNO/: blinky.cpp
utils/: call_cmake.py  generate_libraries.py  merge_hex.py  targets.json
utils/cmake/: JSONParser.cmake  colours.cmake  util.cmake
utils/cmake/buildtools/: codal.cmake
utils/cmake/toolchains/: arm-gcc.cmake
utils/cmake/toolchains/ARM_GCC/: compiler-flags.cmake  size-info.cmake  toolchain.cmake
utils/cmake/toolchains/AVR_GCC/: compiler-flags.cmake  platform_includes.h  size-info.cmake  toolchain.cmake
utils/cmake/toolchains/CLANG/: bin-generator.cmake  compiler-flags.cmake  hex-generator.cmake  toolchain.cmake
utils/cmake/toolchains/XTENSA_GCC/: compiler-flags.cmake  size-info.cmake
utils/cmake/toolchains/arm-gcc/: toolchain.cmake
utils/python/: codal_utils.py  flash.py
utils/python/doc_gen/: system_utils.py
